--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,14 +1,47 @@
 .example-spacer {
     flex: 1 1 auto;
   }
-
-  .example-container {
+.menu{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+  mat-sidenav {
+    width: 205px;
+    border-right: none;
+    text-align: left;
+}
+mat-sidenav-container {
+  height: calc(100vh - 65px);
+}
+.avatar {
+  border-radius: 90%;
+  width: 110px;
+  height: 110px;
+  /* margin-left: 30px ; */
+  margin: 10px 0px 0px 20px ;
+}
+mat-divider {
+  margin: 20px 0px;
+  background-color: #fff;
+}
+  /* .example-container {
     width: 400px;
     height: 200px;
     margin: 10px;
     border: 1px solid #555;
-  }
-  .card{
+  } */
+  /* .card{
     display: block;
     
+  } */
+
+  .flex{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+    justify-content: flex-start;
+    align-items: flex-start;
   }
